--- a/Kotufas NuestroProyecto.css
+++ b/Kotufas NuestroProyecto.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -61,19 +60,36 @@ main {
   padding: 20px;
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.section.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .section-title {
   text-align: center;
   font-size: 24px;
   margin-bottom: 20px;
-   font-family:  "Overpass Mono",monospace;
+  font-family: "Overpass Mono", monospace;
 }
 
 .section-content {
-  padding: 20px;
-  font-family:  "Overpass Mono",monospace;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: "Overpass Mono", monospace;
 }
+
+.section-content p {
+  flex: 1;
+  margin-right: 20px;
+}
+
+
 
 @media (max-width: 767px) {
   header {
@@ -84,20 +100,23 @@ main {
   .hero {
     height: 300px;
   }
+
+  .section-content {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .section-content p {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .section-content img {
+    margin: 0 auto;
+  }
 }
 
-/* Define the initial state and the animation */
-.section {
-  margin: 20px;
-  padding: 20px;
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-}
-
-.section.visible {
-  opacity: 1;
-  transform: translateY(0);
+.section-content img {
+  width: 25%; /* Ajusta el tamaño según sea necesario */
+  height: auto;
 }
